--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="text-center">
                 <main class="container text-center">
                     <h4>Seja muito bem-vindo!</h4><br>
-                    <p>Aguarde, pois em breve você terá acesso a diversas informações e utilidades para sua saúde alimentar.</p>
+                    <p>Aguarde, pois em breve você terá acesso a diversas informações e utislidades para sua saúde alimentar.</p>
                     <div class="link-container">
                         <p class="text-linksU">Links úteis da Nutri Ruth</p>
                         <a href="#" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
