adicao de link blessy

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <p>Aguarde, pois em breve você terá acesso a diversas informações e utislidades para sua saúde alimentar.</p>
                     <div class="link-container">
                         <p class="text-linksU">Links úteis da Nutri Ruth</p>
-                        <a href="#" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
+                        <a href="https://loja.useblessy.com.br/discount/RUTHARANDA" target="_blank" class="d-flex align-items-center btn-link-custom" id="Blessy">
                             <div class="icon-mask">
-                                <img src="images/path-to-other-icon.png" alt="Grupo VIP Desafio 21 dias">
+                                <img src="images/blessy.jpg" alt="CUPOM">
                             </div>
                             <div class="btn-text">
-                                Grupo Desafio Nutrir Fit
+                                Blessy: 5% Off usando o Cupom <br> 🏷 RUTHARANDA
                             </div>
                         </a>
                         <a href="https://api.whatsapp.com/send?phone=5551989122061&text=Ol%C3%A1,%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank" class="d-flex align-items-center btn-link-custom">
