alteracao - cupom blessy e remoção do script de modal, alteração do nome do menu

--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
             <div class="text-center">
                 <main class="container text-center">
                     <h4>Seja muito bem-vindo!</h4><br>
-                    <p>Aguarde, pois em breve você terá acesso a diversas informações e utislidades para sua saúde alimentar.</p>
+                    <p>Aguarde, pois em breve você terá acesso a diversas informações e utilidades para sua saúde alimentar.</p>
                     <div class="link-container">
                         <p class="text-linksU">Links úteis da Nutri Ruth</p>
+                        <a href="ld_pay_nutrirfit.html" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
+                            <div class="icon-mask">
+                                <img src="images/logo_Desafio_NutrirFitVerao_ver2.png" alt="Pagina de pagamento">
+                            </div>
+                            <div class="btn-text">
+                                Desafio Nutrir Fit Carnaval
+                            </div>
+                        </a>
                         <a href="https://loja.useblessy.com.br/discount/RUTHARANDA" target="_blank" class="d-flex align-items-center btn-link-custom" id="Blessy">
                             <div class="icon-mask">
                                 <img src="images/blessy.jpg" alt="CUPOM">
                             </div>
                             <div class="btn-text">
-                                Blessy: 5% Off usando o Cupom <br> 🏷 RUTHARANDA
+                                <span style="font-size: 15px;">Blessy - 5% Off usando o cupom <br></span> 🏷️ <span style="font-weight:bold;">RUTHARANDA</span>
                             </div>
                         </a>
                         <a href="https://api.whatsapp.com/send?phone=5551989122061&text=Ol%C3%A1,%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank" class="d-flex align-items-center btn-link-custom">
@@ -89,7 +97,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script>
+
+    <!--# SCRIPT QUANDO O DESAFIO FOR ENCERRADO-->
+    <!-- <script>
             // Abre o Modal
     document.getElementById("grupoDesafioBtn").onclick = function() {
         document.getElementById("myModal").style.display = "flex";
@@ -107,7 +117,7 @@
         }
     }
 
-    </script>
+    </script> -->
 
 </body>
 </html>
