Alteração de LP para PAY carnaval

--- a/ld_pay_nutrirfit.html
+++ b/ld_pay_nutrirfit.html
@@ -13,19 +13,19 @@
         <header class="header">
             <a href="index.html">
                 <div>
-                    <img src="images/LG-NutrirFit-VR3.png" alt="Nutricionista" class="logo-desafio">
+                    <img src="images/MTD-NUTRIR_FIT_carvanal.png" alt="Nutricionista" class="logo-desafio">
                 </div>
             </a>
         </header>
         <div class="div-central d-flex justify-content-center align-items-center">
             <div class="text-center">
-                <main class="container text-center">
+                <main class="container text-center ld-pay">
                     <h4>Que bom te ver por aqui!</h4><br>
                     <p>Ótima escolha, você está um passo a frente para<br>iniciar uma nova fase na sua vida!<br><br>E eu, estarei aqui para te ajudar.</p>
 
                     <div class="row justify-content-center"> 
                         <div class="col-md-6 img-nutri"> <div class="text-center"> 
-                            <img src="images/_web_fotocommoldura.png" class="img-fluid rounded" alt="Imagem da Nutricionista"> 
+                            <img src="images/ft_nutri_carnaval.png" class="img-fluid rounded" alt="Imagem da Nutricionista"> 
                         </div>
                     </div>
                     <div class="link-container pay-pag">
