Atualização de toda da lp do desafio de carnaval, pendente Depoimentos e selos.

--- a/ld_pay_nutrirfit.html
+++ b/ld_pay_nutrirfit.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri Ruth Aranda</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/dbd3ekc.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-pay">
     <!-- Conteúdo da Página -->
     <div class="content-wrapper">
-        <header class="header">
+        <header class="header-lp_pay">
             <a href="index.html">
                 <div>
                     <img src="images/MTD-NUTRIR_FIT_carvanal.png" alt="Nutricionista" class="logo-desafio">
@@ -20,19 +21,84 @@
         <div class="div-central d-flex justify-content-center align-items-center">
             <div class="text-center">
                 <main class="container text-center ld-pay">
-                    <h4>Que bom te ver por aqui!</h4><br>
-                    <p>Ótima escolha, você está um passo a frente para<br>iniciar uma nova fase na sua vida!<br><br>E eu, estarei aqui para te ajudar.</p>
-
-                    <div class="row justify-content-center"> 
-                        <div class="col-md-6 img-nutri"> <div class="text-center"> 
-                            <img src="images/ft_nutri_carnaval.png" class="img-fluid rounded" alt="Imagem da Nutricionista"> 
-                        </div>
+                    <div class="row justify-content-center">
+                        <h4 class="tlt-lp01">Transforme seu verão em 14 dias</h4><br>
+                        <p class="cta-lp01">Inscreva-se agora e garanta sua vaga no Desafio <br> clicando no botão abaixo.</p>
                     </div>
-                    <div class="link-container pay-pag">
-                        <a href="https://pay.hotmart.com/O96677699R?bid=1732076438953" target="_blank">
-                            <p class="text-linksU-pay">Adquirir acesso ao Desafio</p>
+
+                    <div class="link-container btn-pay-pag1">
+                        <a href="https://pay.hotmart.com/D98020780R" target="_blank">
+                            <p class="text-linksU-pay">Inscreva-se Agora</p>
                         </a>
                     </div>
+
+                    <section id="beneficios">
+                        <div class="container lp-pay-beneficios">
+                            <h2 class="tlt-lp02"># Beneficios do Desafio</h2>
+                            <p class="p-beneficios">Serão 14 dias com Foco e com desafios, metas e <br> 
+                                orientações para ter mais disposição, saúde e <br>
+                                diminuir aquele inchaço antes do Carnaval.
+                                </p>
+                        </div>
+                    </section>
+
+                    <section id="detalhes">
+                        <div class="container lp-pay-detalhes">
+                            <h2 class="tlt-lp03"># Detalhes do Desafio</h2>
+                            <ul class="lista-detalhes">
+                                <li>
+                                    <span class="icone-check"></span>
+                                    <p>De 15 a 28 de fevereiro</p>
+                                </li>
+                                <li>
+                                    <span class="icone-check"></span>
+                                    <p style="margin-left: 3px;">E-book com orientações, regras, guia das refeições e sugestões</p>
+                                </li>
+                                <li>
+                                    <span class="icone-check"></span>
+                                    <p style="margin-left: 5px;">E-book com receiras para o verão e para ajudar a desinflamar o seu corpo</p>
+                                </li>
+                                <li>
+                                    <span class="icone-check"></span>
+                                    <p>Grupo exclusivo no WhatsApp</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section id="nutriruth">
+                        <div class="container lp-pay-nutri">
+                            <h2 class="tlt-lp04"># Quem vai te ajudar?</h2>
+
+                            <div class="row justify-content-center"> 
+                                <div class="col-md-6 img-nutri"> <div class="text-center"> 
+                                    <img src="images/ft_nutri_carnaval.png" class="img-fluid rounded" alt="Imagem da Nutricionista"> 
+                                </div>
+                            </div>
+
+                            <p class="p-nutri"> <span style="font-weight: bold;">Olá, eu sou a Ruth Aranda!</span> <br><br>
+
+                                Nutricionista clínica com mais de 8 anos de experiência, sou apaixonada por ajudar meus pacientes a transformarem sua relação com a comida e alcançarem seus objetivos de saúde e bem-estar. <br>
+                                <br>
+                                Minha jornada na nutrição me levou a atuar em grandes hospitais, clínicas estéticas e de saúde, além de manter um consultório particular, onde ofereço um atendimento personalizado e humanizado.
+                                <br><br>
+                                Sou especializada em comportamento alimentar, emagrecimento e hipertrofia, e acredito que a chave para uma vida saudável está no equilíbrio entre alimentação, mente e corpo.
+                                <br><br>
+                                Aqui, você não vai encontrar dietas restritivas ou soluções milagrosas. Meu trabalho é baseado em ciência, respeito e individualidade, para que você possa conquistar resultados duradouros e se sentir bem consigo mesmo(a).
+                                <br><br>
+                                <span style="color: #FFA500; font-weight: bold;">Vamos juntos nessa jornada? Estou aqui para te guiar com cuidado, expertise e muito carinho!
+                                </span> 
+                                </p>
+
+                            <div class="link-container-2 btn-pay-pag2">
+                                <p class="text-pay-2">Não perca mais tempo! <br> Garanta sua vaga por <span style="font-weight: bold;">apenas R$14,94</span> e comece sua jornada.</p>
+                                <a href="https://pay.hotmart.com/D98020780R" target="_blank">
+                                    <p class="text-linksU-pay-2">Inscreva-se Agora</p>
+                                </a>
+                            </div>
+
+                        </div>
+                    </section>
+                    
                 </main>
             </div>
         </div>
@@ -50,7 +116,7 @@
         </div>
     </div> -->
 
-    <footer class="footer">
+    <footer class="footer ftr-lp-pay">
         <div class="logo-container">
             <a href="https://www.nutriruth.com.br" target="_blank">
                 <img src="images/path-to-client-logo.png" alt="Logo Cliente" class="logo">
