--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h4>Seja muito bem-vindo!</h4><br>
                     <p>Aguarde, pois em breve você terá acesso a diversas informações e utilidades para sua saúde alimentar.</p>
                     <div class="link-container">
-                        <p class="text-linksU">Links úteis da Nutri Ruth</p>
+                        <p class="text-linksU" style="color: black;">Links úteis da Nutri Ruth</p>
                         <a href="ld_pay_nutrirfit.html" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
                             <div class="icon-mask">
                                 <img src="images/logo_Desafio_NutrirFit_carnaval.png" alt="Pagina de pagamento">
