Remoção link do desafio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <p>Aguarde, pois em breve você terá acesso a diversas informações e utilidades para sua saúde alimentar.</p>
                     <div class="link-container">
                         <p class="text-linksU" style="color: black;">Links úteis da Nutri Ruth</p>
-                        <a href="ld_pay_nutrirfit.html" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
+                        <a href="#" class="d-flex align-items-center btn-link-custom" id="grupoDesafioBtn">
                             <div class="icon-mask">
                                 <img src="images/logo_Desafio_NutrirFit_carnaval.png" alt="Pagina de pagamento">
                             </div>
@@ -98,8 +98,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
 
-    <!--# SCRIPT QUANDO O DESAFIO FOR ENCERRADO-->
-    <!-- <script>
+    <!-- # SCRIPT QUANDO O DESAFIO FOR ENCERRADO-->
+    <script>
             // Abre o Modal
     document.getElementById("grupoDesafioBtn").onclick = function() {
         document.getElementById("myModal").style.display = "flex";
@@ -117,7 +117,7 @@
         }
     }
 
-    </script> -->
+    </script> 
 
 </body>
 </html>
